tests/v0-fail/optional.out
Running <root>/optional.cli ...

printf "hello\n"
---
hello
---
ERROR: pattern literal at line <root>/optional.cli:7 does not match output line "<eof>"
matching Sequence([Optional("hello"), "hello", End])
  matching Optional("hello")
    matching "hello"
    match: "hello"
  matching "hello"

❌ FAIL

<root>/optional.cli FAILED
Error: pattern literal at line <root>/optional.cli:7 does not match output line "<eof>"

