tests/v0-fail/optional.cli
#!/usr/bin/env clitest --v0

$ printf "hello\n"
optional {
    ! hello
}
! hello
